# law_number_searcher

./: .taurignore  Cargo.toml  README.md  numbers.sq3-shm  numbers.sq3-wal  package.json  pnpm-lock.yaml  rsbuild.config.ts  rustfmt.toml  tsconfig.json
.cargo/: config.toml
extractors/: Cargo.toml
extractors/src/: lib.rs
extractors/src/parsers/: prezident_ukaz.rs
plugins/: Cargo.toml
plugins/json/: .~lock.numbers.csv#  DocumentTypes.json  SignatoryAuthorities.json  number_types.txt
plugins/src/: error.rs  lib.rs
plugins/src/extractors/: bash.rs  bash_off_site_html_response.html  burat.rs  buryat_site.html  default.rs  dubles.txt  extractor_manager.rs  mod.rs  number_extractors.rs  plugin_trait.rs  prezident.rs  signatory_authorites.rs  types.rs  universal.rs
publication/: Cargo.toml
publication/src/: lib.rs  models.rs  publication_api.rs  requests.rs
searcher/: Cargo.toml
searcher/src/: error.rs  lib.rs
src/: App.vue  base.css  main.ts
src-tauri/: Cargo.toml  build.rs  latest.json  numbers.sq3  numbers.sq3-shm  numbers.sq3-wal  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/reports/: Глава Республики Башкортостан - Указ (2024).xlsx  Президент Российской Федерации - Указ (2024).xlsx  Республика Бурятия - Закон (2024).xlsx
src-tauri/src/: emits.rs  error.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/db/: connection.rs  mod.rs  repository.rs
src-tauri/src/plugins/: mod.rs  searcher.rs
src-tauri/src/services/: excel.rs  mod.rs
src/@types/: dictionary.ts  document_type.ts  number.ts  signatory_authority.ts
src/components/: Header.vue  Navigation.vue  Numbers.vue  Searcher.vue  ThemeManager.vue
src/components/dictionaries/: organ_selector.ts  select_item_content.css  type_selector.ts  useDictionary.ts
src/components/loaders/: Loader.vue  Loader1.vue
src/composables/: useSelechtHeight.ts
src/tauri/: abstract.ts  commands.ts  events.ts
src/views/: main.ts
win_build/: readme.md
