[package]
name = "number_seracher_workspace"
version = "0.1.0"
edition = "2021"
authors = ["Alex_Xar <P40b0s@gmail.com>"]

[workspace]
members = ["plugins", "searcher",
    "src-tauri",
]
default-members = ["src-tauri"]

#sudo dnf install mingw32-gcc mingw64-gcc
#сломалась линковка по умолчанию - x86_64-w64-mingw32-gcc not found, указал явно вроде заработала
# [target.x86_64-pc-windows-gnu]
# linker = "x86_64-w64-mingw32-gcc"
# ar = "x86_64-w64-mingw32-ar"

[dependencies]



