[package]
name = "extractors"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
logger = {git = "https://github.com/P40b0s/logger.git"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
publication_api = {git = "https://github.com/P40b0s/publication_api.git", package = "publication"}

[dev-dependencies]
tokio-test= {version ="0.4.4"}