[package]
name = "publication"
version = "0.1.0"
edition = "2021"

[dependencies]
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
scraper="0.19.0"
thiserror="*"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
tokio= {version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "bytes"] }
tokio-test= {version ="0.4.4"}
# hyper= {version="1.3.1", features = ["http1"]}
# hyper-util = { version = "0.1.5", features = ["full"] }
# http-body-util = "0.1.2"
sha256 = "1.5.0"
similar = "2.5.0"
nom="7.1.3"
aho-corasick = "1.1.3"
regex="*"
once_cell="*"