[package]
name = "searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
logger = {git = "https://github.com/P40b0s/logger.git"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
plugins = {path = "../plugins"}
publication_api = {git = "https://github.com/P40b0s/publication_api.git", package = "publication"}
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
uuid= {version="1.11.0", features = ["v7"] }
thiserror="2.0.7"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tokio-test="0.4.4"