[package]
name = "number_searcher"
version = "0.1.8"
description = "Document skipped numbers searcher"
authors = ["Alex_Xar <P40b0s@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "number_searcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.3", features = [] }
tauri-plugin-shell = "2.2.0"
tokio = { version =  "1.43.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror="2.0.6"
logger = {git = "https://github.com/P40b0s/logger.git"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
searcher = {path = "../searcher", package = "searcher" }
sqlx= {version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
uuid= {version="1.12.1", features = ["v7"] }
tauri-plugin-process = "2.2.0"
rust_xlsxwriter = "0.81.0"
[dev-dependencies]
tokio-test= {version ="0.4.4"}

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
